Changing font-color which will make it more readable Fix some grammar

--- a/Garage2.0/Content/Site.css
+++ b/Garage2.0/Content/Site.css
@@ -5,7 +5,7 @@
     padding-top: 50px;
     padding-bottom: 20px;
     color: rgb(70, 211, 31);
-    text-shadow: 1px 3px 1px red;
+    text-shadow: 1px 3px 1px blue;
 }
 
 /* Set padding to keep content from hitting the edges */
